--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       }
 
       // References
-      const canvas    = document.getElementById("unity-canvas");
+      //const canvas    = document.getElementById("unity-canvas");
       const marker    = document.getElementById("marker");
       const loaderUrl = "Build/UnityWebARTest.loader.js";
       const config    = {
