--- a/index.html
+++ b/index.html
@@ -62,23 +62,22 @@
       </div>
     </div>
 
-    <!-- === Unity Loader + AR.js ↔ Unity Bridge === -->
+    <!-- === Unity Loader + AR.js → CubeSpawner Bridge === -->
     <script>
-      // 1) A small banner for Unity warnings/errors
+      // small banner for Unity warnings/errors
       function unityShowBanner(msg, type) {
         const b = document.querySelector("#unity-warning");
         const div = document.createElement("div");
         div.innerHTML = msg;
-        div.style = type === "error"
-          ? "background:red;padding:10px;"
-          : type === "warning"
-            ? "background:yellow;padding:10px;"
-            : "";
+        if (type === "error") div.style = "background:red;padding:10px;";
+        if (type === "warning") {
+          div.style = "background:yellow;padding:10px;";
+          setTimeout(()=>b.removeChild(div),5000);
+        }
         b.appendChild(div);
-        if (type === "warning") setTimeout(()=>b.removeChild(div),5000);
       }
 
-      // 2) Prepare references & config
+      // refs & config
       const canvas    = document.getElementById("unity-canvas");
       const marker    = document.getElementById("marker");
       const loaderUrl = "Build/UnityWebARTest.loader.js";
@@ -94,11 +93,10 @@
         }
       };
 
-      // 3) Inject Unity’s loader script (only once!)
+      // inject Unity loader
       const loader = document.createElement("script");
       loader.src = loaderUrl;
       loader.onload = () => {
-        // 4) Boot Unity
         createUnityInstance(canvas, config, (progress) => {
           document.querySelector("#unity-progress-bar-full")
                   .style.width = (100*progress) + "%";
@@ -106,25 +104,34 @@
           window.unityInstance = unityInstance;
           document.querySelector("#unity-loading-bar").style.display = "none";
 
-          // Helpers for messaging
+          // helpers for CubeSpawner
           const sendState = v =>
             unityInstance.SendMessage("CubeSpawner","SetTracking",v);
-          const sendPose  = () => {
+
+          const sendPose = () => {
             if (!marker.object3D.visible) return;
             const {position:p, quaternion:q} = marker.object3D;
             unityInstance.SendMessage(
-              "ARObject","UpdateFromJS",
-              [p.x,p.y,p.z,q.x,q.y,q.z].join(",")
+              "CubeSpawner","UpdateTransformData",
+              JSON.stringify({
+                x:  p.x,
+                y:  p.y,
+                z:  p.z,
+                qx: q.x,
+                qy: q.y,
+                qz: q.z,
+                qw: q.w
+              })
             );
           };
 
-          // 5) Wire AR.js events → Unity
-          marker.addEventListener("markerFound",()=>{
+          // wire AR.js events → CubeSpawner
+          marker.addEventListener("markerFound", ()=>{
             sendState(1);
             sendPose();
             unityInstance.SendMessage("CubeSpawner","SpawnCube");
           });
-          marker.addEventListener("markerLost", () => sendState(0));
+          marker.addEventListener("markerLost",  ()=> sendState(0));
           marker.addEventListener("componentchanged", sendPose);
 
         }).catch(err=>console.error("Unity load error:",err));
