--- a/index.html
+++ b/index.html
@@ -110,12 +110,28 @@
 
           const sendPose = () => {
             if (!marker.object3D.visible) return;
+
+            // read AR.js pose
             const {position:p, quaternion:q} = marker.object3D;
+
+            // convert to Unity coords:
+            //  - invert Z so forward matches
+            //  - flip X/Y of quaternion for handedness
+            //  - optional scale (e.g. /100) if your units are too large
+            const ux = p.x;
+            const uy = p.y;
+            const uz = -p.z;
+
+            const rx = -q.x;
+            const ry = -q.y;
+            const rz =  q.z;
+            const rw =  q.w;
+
             unityInstance.SendMessage(
               "CubeSpawner","UpdateTransformData",
               JSON.stringify({
-                position: { x: p.x, y: p.y, z: p.z },
-                rotation: { x: q.x, y: q.y, z: q.z, w: q.w }
+                position: { x: ux, y: uy, z: uz },
+                rotation: { x: rx, y: ry, z: rz, w: rw }
               })
             );
           };
