--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       <a-entity camera></a-entity>
     </a-scene>
 
+    <button style="position:absolute;top:10px;left:10px;z-index:100;pointer-events:auto;"
+       onclick="unityInstance.SendMessage('CubeSpawner','SpawnCube')">
+     Spawn Cube
+   </button>
     <!-- === Unity Canvas & Loading UI === -->
     <div id="unity-container">
       <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
