--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
     </style>
   </head>
   <body>
-    <!-- Spawn button to manually test if SendMessage works -->
+    <!-- Spawn button to manually test if SendMessage works TEMP-->
     <button id="spawn-button" onclick="unityInstance.SendMessage('CubeSpawner','SpawnCube')">
       Spawn Cube
     </button>
-
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+    <a-scene
+      embedded
+      vr-mode-ui="enabled: false"
+      renderer="alpha:true"
+      arjs="sourceType:webcam;…"
+    >
+      <a-nft id="marker" …>
+        <a-entity camera></a-entity>
+      </a-nft>
+    </a-scene>
     <!-- Unity Canvas & Loading UI -->
     <div id="unity-container">
       <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
