--- a/index.html
+++ b/index.html
@@ -2,51 +2,51 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Unity WebGL Smoke Test</title>
+    <title>Unity WebARProject</title>
+
+    <!-- 1) A-Frame + AR.js for NFT tracking -->
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+
     <style>
-      html, body { margin:0; padding:0; overflow:hidden; }
+      html, body { margin:0; padding:0; overflow:hidden; background:transparent; }
+      /* AR.js scene full-screen behind Unity */
+      #scene {
+        position:absolute; top:0; left:0;
+        width:100vw; height:100vh;
+      }
+      /* Unity canvas sits on top—but remains transparent */
       #unity-container, #unity-canvas {
         position:absolute; top:0; left:0;
         width:100vw; height:100vh;
-        background:transparent;
+        background:transparent !important;
+        pointer-events:none;
       }
-      #spawn-button {
-        position: absolute;
-        top: 10px; left: 10px;
-        z-index: 100;
-        pointer-events: auto;
-      }
+      canvas { background:transparent !important; }
     </style>
   </head>
   <body>
-    <!-- Spawn button to manually test if SendMessage works TEMP-->
-    <button id="spawn-button" onclick="unityInstance.SendMessage('CubeSpawner','SpawnCube')">
-      Spawn Cube
-    </button>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+    <!-- === AR.js Scene === -->
     <a-scene
-    embedded
-    vr-mode-ui="enabled: false"
-    renderer="alpha: true; antialias: true;"
-    arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;"
-  >
-    <!-- your NFT marker needs at least a type and a url -->
-    <a-nft 
-      type="nft" 
-      url="StreamingAssets/your-marker-folder" 
-      smooth="true" 
-      smoothCount="10"
-      smoothTolerance="0.01"
-      smoothThreshold="5">
-      <!-- anything you want to stick on the marker -->
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
-    </a-nft>
+      id="scene"
+      embedded
+      vr-mode-ui="enabled: false"
+      renderer="logarithmicDepthBuffer: true; alpha: true"
+      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;"
+    >
+      <a-nft
+        id="marker"
+        type="nft"
+        url="UnityWebARTest/Descriptors/test2"
+        smooth="true" smoothCount="10"
+        smoothTolerance="0.01" smoothThreshold="5"
+      >
+        <a-light type="ambient" intensity="1"></a-light>
+      </a-nft>
+      <a-entity camera></a-entity>
+    </a-scene>
 
-    <!-- camera must live at root of scene (not inside the <a-nft>) -->
-    <a-entity camera></a-entity>
-  </a-scene>
-    <!-- Unity Canvas & Loading UI -->
+    <!-- === Unity Canvas & Loading UI === -->
     <div id="unity-container">
       <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
       <div id="unity-loading-bar">
@@ -58,55 +58,91 @@
       <div id="unity-warning"></div>
       <div id="unity-footer">
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Unity Smoke Test</div>
+        <div id="unity-build-title">UnityWebARProject</div>
       </div>
     </div>
 
-    <!-- Unity Loader & immediate spawn -->
+    <!-- === Unity Loader + AR.js → CubeSpawner Bridge === -->
     <script>
-      function unityShowBanner(msg,type){
-        const b=document.querySelector("#unity-warning"),
-              d=document.createElement("div");
-        d.innerHTML=msg;
-        d.style= type==="error"
-          ? "background:red;padding:10px;"
-          : (type==="warning"
-             ? "background:yellow;padding:10px;"
-             : "");
-        b.appendChild(d);
-        if(type==="warning") setTimeout(()=>b.removeChild(d),5000);
+      // small banner for Unity warnings/errors
+      function unityShowBanner(msg, type) {
+        const b = document.querySelector("#unity-warning");
+        const div = document.createElement("div");
+        div.innerHTML = msg;
+        if (type === "error") div.style = "background:red;padding:10px;";
+        if (type === "warning") {
+          div.style = "background:yellow;padding:10px;";
+          setTimeout(()=>b.removeChild(div),5000);
+        }
+        b.appendChild(div);
       }
 
-      const canvas = document.getElementById("unity-canvas");
+      // refs & config
+      const canvas    = document.getElementById("unity-canvas");
+      const marker    = document.getElementById("marker");
       const loaderUrl = "Build/UnityWebARTest.loader.js";
-      const config = {
+      const config    = {
         dataUrl:    "Build/UnityWebARTest.data",
         frameworkUrl:"Build/UnityWebARTest.framework.js",
         codeUrl:    "Build/UnityWebARTest.wasm",
         streamingAssetsUrl:"StreamingAssets",
-        showBanner: unityShowBanner,
-        webglContextAttributes: { alpha:true, premultipliedAlpha:false }
+        showBanner:   unityShowBanner,
+        webglContextAttributes: {
+          alpha:             true,
+          premultipliedAlpha:false
+        }
       };
 
-      // Inject Unity loader
+      // inject Unity loader
       const loader = document.createElement("script");
       loader.src = loaderUrl;
       loader.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           document.querySelector("#unity-progress-bar-full")
-                  .style.width = (100 * progress) + "%";
+                  .style.width = (100*progress) + "%";
         }).then(unityInstance => {
-          // Store globally
           window.unityInstance = unityInstance;
-          // Hide loading UI
           document.querySelector("#unity-loading-bar").style.display = "none";
-          // **Smoke test**: spawn a cube immediately
-          unityInstance.SendMessage("CubeSpawner","SpawnCube");
-        }).catch(err=>{
-          console.error("Unity load error:",err);
-        });
-      };
-      document.body.appendChild(loader);
+
+          // helpers for CubeSpawner
+          const sendState = v =>
+            unityInstance.SendMessage("CubeSpawner","SetTracking",v);
+
+          const sendPose = () => {
+              if (!unityInstance || !marker.object3D.visible) return;
+              const { position: p, quaternion: q } = marker.object3D;
+
+              // cm→m scale, but **no** invert on Z this time:
+              const ux = p.x / 100;
+              const uy = p.y / 100;
+              const uz = p.z / 100;         // <-- positive p.z becomes negative in world
+
+              // Handedness for rotation (keep as you had):
+              const rx = -q.x;
+              const ry = -q.y;
+              const rz =  q.z;
+              const rw =  q.w;
+
+              const payload = JSON.stringify({
+                position: { x: ux, y: uy, z: uz },
+                rotation: { x: rx, y: ry, z: rz, w: rw }
+              });
+
+              console.log("JS → Unity JSON:", payload);
+              unityInstance.SendMessage("CubeSpawner", "UpdateTransformData", payload);
+            };
+
+            marker.addEventListener("markerFound", () => {
+              unityInstance.SendMessage("CubeSpawner", "SetTracking", 1);
+              sendPose();
+              unityInstance.SendMessage("CubeSpawner", "SpawnCube");
+            });
+            marker.addEventListener("markerLost",  () => unityInstance.SendMessage("CubeSpawner", "SetTracking", 0));
+            marker.addEventListener("componentchanged", sendPose);
+
+          }).catch(console.error);
+        };
+        document.body.appendChild(loader);
     </script>
   </body>
 </html>
